force-app/main/default/objects/Product2/fields/Any_Other_Levies__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Levies__c</fullName>
    <label>Any Other Levies</label>
    <description>Any Other Levies.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>