force-app/main/default/objects/Product2/fields/Compatibility__c.field-meta.xml
<CustomField>
    <fullName>Compatibility__c</fullName>
    <label>Compatibility / Alternative Names</label>
    <description>Compatibility / Alternative Names.</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>