force-app/main/default/objects/Product2/fields/Default_Warranty_Months__c.field-meta.xml
<CustomField>
    <fullName>Default_Warranty_Months__c</fullName>
    <label>Default Warranty (Months)</label>
    <description>Default Warranty (Months).</description>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>