force-app/main/default/objects/Product2/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <label>Detailed Description</label>
    <description>Detailed Description</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>