force-app/main/default/objects/Product2/fields/Equipment_Name__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Name__c</fullName>
    <label>Equipment Name</label>
    <description>Equipment Name</description>
    <length>255</length>
    <type>Text</type>
</CustomField>