force-app/main/default/objects/Product2/fields/ERP_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sync_Status__c</fullName>
    <label>ERP Sync Status</label>
    <description>ERP Sync Status</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>