force-app/main/default/objects/Product2/fields/HSN_Code_International__c.field-meta.xml
<CustomField>
    <fullName>HSN_Code_International__c</fullName>
    <label>HSN Code (International)</label>
    <description>HSN Code (International)</description>
    <length>20</length>
    <type>Text</type>
</CustomField>