force-app/main/default/objects/Product2/fields/Installation_Cost_Percent__c.field-meta.xml
<CustomField>
    <fullName>Installation_Cost_Percent__c</fullName>
    <label>Installation Cost %</label>
    <description>Installation Cost %</description>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>