force-app/main/default/objects/Product2/fields/Installation_Terms__c.field-meta.xml
<CustomField>
    <fullName>Installation_Terms__c</fullName>
    <label>Installation Terms</label>
    <description>Installation Terms.</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>