force-app/main/default/objects/Product2/fields/Insurance_Cost_Percent__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Cost_Percent__c</fullName>
    <label>Insurance Cost %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>