force-app/main/default/objects/Product2/fields/Internal_Transport_Cost_Percent__c.field-meta.xml
<CustomField>
    <fullName>Internal_Transport_Cost_Percent__c</fullName>
    <label>Internal Transport Cost %</label>
    <description>Internal Transport Cost %</description>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>