force-app/main/default/objects/Product2/fields/Is_Training_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Training_Required__c</fullName>
    <label>Is Training Required</label>
    <description>Is Training Required</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>