force-app/main/default/objects/Product2/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <externalId>true</externalId>
    <label>Item Code</label>
    <description>Item Code.</description>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>