force-app/main/default/objects/Product2/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>Product manufacturer/make - Product Master Module 7</description>
    <label>Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>