force-app/main/default/objects/Product2/fields/Manager_Discount_Up_to__c.field-meta.xml
<CustomField>
    <fullName>Manager_Discount_Up_to__c</fullName>
    <label>Manager Discount Up to</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>