force-app/main/default/objects/Product2/fields/OEM_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>OEM_Part_Number__c</fullName>
    <label>OEM Part Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>