force-app/main/default/objects/Product2/fields/Packing_Charges_Percent__c.field-meta.xml
<CustomField>
    <fullName>Packing_Charges_Percent__c</fullName>
    <label>Packing Charges %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>