force-app/main/default/objects/Product2/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <label>Parameters</label>
    <description>Calibration parameters printed on the Project Costing table of the Quote PDF.</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>