force-app/main/default/objects/Product2/fields/Parent_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Parent_Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Equipment</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Child Products</relationshipLabel>
    <relationshipName>Child_Products</relationshipName>
    <type>Lookup</type>
</CustomField>