force-app/main/default/objects/Product2/fields/Product_Image_URL_3__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_URL_3__c</fullName>
    <label>Product Image URL 3</label>
    <length>255</length>
    <type>Url</type>
</CustomField>