force-app/main/default/objects/Product2/fields/Product_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_URL__c</fullName>
    <label>Product Image URL</label>
    <description>Product Image URL.</description>
    <type>Url</type>
</CustomField>