force-app/main/default/objects/Product2/fields/Product_V__c.field-meta.xml
<CustomField>
    <fullName>Product_V__c</fullName>
    <label>Product Vertical</label>
    <description>Product Vertical</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Vertical</valueSetName>
    </valueSet>
</CustomField>