force-app/main/default/objects/Product2/fields/Promotional_Cost_Percent__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Cost_Percent__c</fullName>
    <label>Promotional Cost %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>