force-app/main/default/objects/Product2/fields/Quantity_Pack_Size__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Pack_Size__c</fullName>
    <label>Quantity (Pack Size)</label>
    <description>Quantity (Pack Size).</description>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>