force-app/main/default/objects/Product2/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <description>Remarks.</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>