force-app/main/default/objects/Product2/fields/SAP_Item_New_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Item_New_Code__c</fullName>
    <label>SAP Item New Code</label>
    <description>SAP Item New Code.</description>
    <length>100</length>
    <type>Text</type>
</CustomField>