force-app/main/default/objects/Product2/fields/SAP_Item_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Item_No__c</fullName>
    <externalId>true</externalId>
    <label>SAP Item No</label>
    <description>SAP Item No</description>
    <length>100</length>
    <type>Text</type>
</CustomField>