force-app/main/default/objects/Product2/fields/Service_Item__c.field-meta.xml
<CustomField>
    <fullName>Service_Item__c</fullName>
    <label>Service Item</label>
    <description>When Yes, the product is not linked to any pricebook. Sales Price and Tax are entered manually on the quote line and tiered pricing / approval logic are skipped.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>