force-app/main/default/objects/Product2/fields/Shipping_Charges_Percent__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Charges_Percent__c</fullName>
    <label>Shipping Charges %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>