force-app/main/default/objects/Product2/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <description>Source.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OEM New</fullName>
                <default>true</default>
                <label>OEM New</label>
            </value>
            <value>
                <fullName>OEM Refurbished</fullName>
            </value>
            <value>
                <fullName>OEM Refurb</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>