force-app/main/default/objects/Product2/fields/Standard_Price_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price_with_Tax__c</fullName>
    <formula>Standard_Price__c * (1 + Tax__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Price with Tax</label>
    <description>Standard Price with Tax.</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>