force-app/main/default/objects/Product2/fields/Training_Cost_Percent__c.field-meta.xml
<CustomField>
    <fullName>Training_Cost_Percent__c</fullName>
    <label>Training Cost %</label>
    <description>Training Cost %.</description>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>