force-app/main/default/objects/Product2/fields/VP_Sales_Discount_Up_to__c.field-meta.xml
<CustomField>
    <fullName>VP_Sales_Discount_Up_to__c</fullName>
    <label>VP Sales Discount Up to</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>