force-app/main/default/objects/Product2/fields/Warranty_Cost_Percent__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Cost_Percent__c</fullName>
    <label>Warranty Cost %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>