force-app/main/default/objects/Product2/fields/Warranty_Terms_Description__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Terms_Description__c</fullName>
    <label>Warranty Terms Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>