force-app/main/default/objects/Product2/listViews/Active_Products.listView-meta.xml
<ListView>
    <fullName>Active_Products</fullName>
    <columns>NAME</columns>
    <columns>Item_Code__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Brand__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Product_V__c</columns>
    <columns>Standard_Price__c</columns>
    <columns>UOM__c</columns>
    <columns>HSN_Code__c</columns>
    <columns>Product_Status__c</columns>
    <columns>ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Products</label>
    <language>en_US</language>
</ListView>