force-app/main/default/objects/Product2/listViews/All_Products.listView-meta.xml
<ListView>
    <fullName>All_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Item_Code__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Brand__c</columns>
    <columns>Make__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Standard_Price__c</columns>
    <columns>Product_Status__c</columns>
    <columns>ERP_Sync_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
    <!-- Module 7. -->
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>